--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "digitalhub-runtime-kfp"
-version = "0.10.0b1"
+version = "0.10.0"
 description = "KFP runtime for DHCore"
 readme = "README.md"
 authors = [
@@ -47,7 +47,7 @@ line-length = 120
 convention = "numpy"
 
 [tool.bumpver]
-current_version = "0.10.0b1"
+current_version = "0.10.0"
 version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
 commit_message  = "Bump version {old_version} -> {new_version}"
 commit          = false
