--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 keywords = ["data", "dataops", "kubernetes"]
 requires-python = ">=3.9, <3.13"
@@ -32,7 +33,7 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/scc-digitalhub/digitalhub-sdk"
+Homepage = "https://github.com/scc-digitalhub/digitalhub-sdk-runtime-kfp"
 
 [tool.flake8]
 max-line-length = 120
